Issue#134: code refactoring and minor changes.
- Added check for existing "main" email or phone user contact when adding new contact.
- Renamed CRUD operations in openapi specification.
- User emails are now randomly generated in User API tests.
- Fixed query contacts by ContactType.
- Fixed CheckStyle violations.
- Optimized imports.
- Added Intellij IDEA generated native Code Style. Updated home-docs/code-style.md.
- CheckStyle plugin version updated to 8.41.
